# nrf5340-cpuapp

./: .clang-format  .gitignore  .gitlab-ci.yml  readme.md
app/: prj.conf  west.yml
app/inc/: robot.h  ses_assignment.h
app/inc/robot/: calibration.h  settings.h
app/inc/robot/sensors/: hall.h  lsm6dsox.h  motion_verify.h  sensor_base.h  tap_detect.h
app/src/: main.c
app/src/robot/: settings.c
app/src/robot/sensors/: lis3mdl.c  lsm6dsox.c  motion_verify.c  sensor_base.c
ses_assignment/: CMakeLists.txt  mergebot_nrf5340_cpuapp_ns.overlay  prj.conf
ses_assignment/inc/: i2c.h  lis3mdl.h  lsm6dsox.h  power.h  robot.h  ses_assignment.h  tap_detect.h
ses_assignment/inc/robot/: calibration.h  power.h
ses_assignment/inc/robot/sensors/: crash_detect.h  int1_gpio.h  lis3mdl.h  lsm6dsox.h  motion_verify.h  tap_detect.h
ses_assignment/src/: i2c.c  lis3mdl.c  lsm6dsox.c  main.c  power.c  robot.c  ses_assignment.c  tap_detect.c
ses_assignment/src/robot/: calibration.c  power.c
ses_assignment/src/robot/sensors/: crash_detect.c  hall.c  int1_gpio.c  lis3mdl.c  lsm6dsox.c  motion_verify.c  tap_detect.c
